--- a/marcas.html
+++ b/marcas.html
@@ -34,15 +34,17 @@
       </div>          
     </div>    
   </div>
-  <nav>
-    <ul class="navMenu">
-      <a href="index.html"><li class="menuText">INICIO</li></a>
-      <a href="quemsomos.html"><li class="menuText">QUEM SOMOS</li></a>
-      <a href="galeria.html"><li class="menuText">GALERIA</li></a>
-      <a href="produtos.html"><li class="menuText">PRODUTOS</li></a>
-      <a href="contatos.html"><li class="menuText">CONTATOS</li></a>
-      <a href="#"><li class="menuText">MARCAS</li></a>
-      <a href="associados.html"><li class="menuText">ASSOCIADOS</li></a>
+  <button class="sideBtnPhone downBtn" id="sideBtnDown" onclick="sidebuttonD()"><i class="fas fa-caret-down"></i></button> <!--Sidebutton Phone Mode-->
+  <button class="sideBtnPhone upBtn" id="sideBtnUp" onclick="sidebuttonU()"><i class="fas fa-caret-up"></i></button> <!--Sidebutton Phone Mode-->
+  <nav id="nav">
+    <ul class="navMenu"> <!--Menu-->
+      <a href="#"><li class="menuText" id="op1">INICIO</li></a>
+      <a href="quemsomos.html"><li class="menuText" id="op2">QUEM SOMOS</li></a>
+      <a href="galeria.html"><li class="menuText" id="op3">GALERIA</li></a>
+      <a href="produtos.html"><li class="menuText" id="op4">PRODUTOS</li></a>
+      <a href="contatos.html"><li class="menuText" id="op5">CONTATOS</li></a>
+      <a href="marcas.html"><li class="menuText" id="op6">MARCAS</li></a>
+      <a href="associados.html"><li class="menuText" id="op7">ASSOCIADOS</li></a>
     </ul>
   </nav>
   <div class="main">
