--- a/associados.html
+++ b/associados.html
@@ -38,13 +38,13 @@
   <button class="sideBtnPhone upBtn" id="sideBtnUp" onclick="sidebuttonU()"><i class="fas fa-caret-up"></i></button> <!--Sidebutton Phone Mode-->
   <nav id="nav">
     <ul class="navMenu"> <!--Menu-->
-      <a href="#"><li class="menuText" id="op1">INICIO</li></a>
+      <a href="index.html"><li class="menuText" id="op1">INICIO</li></a>
       <a href="quemsomos.html"><li class="menuText" id="op2">QUEM SOMOS</li></a>
       <a href="galeria.html"><li class="menuText" id="op3">GALERIA</li></a>
       <a href="produtos.html"><li class="menuText" id="op4">PRODUTOS</li></a>
       <a href="contatos.html"><li class="menuText" id="op5">CONTATOS</li></a>
       <a href="marcas.html"><li class="menuText" id="op6">MARCAS</li></a>
-      <a href="associados.html"><li class="menuText" id="op7">ASSOCIADOS</li></a>
+      <a href="#"><li class="menuText" id="op7">ASSOCIADOS</li></a>
     </ul>
   </nav>
     <div class="main">
