--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
       </div>          
     </div>    
   </div>
-  <button class="sideBtnPhone downBtn" id="sideBtnDown" onclick="sidebuttonD()"><i class="fas fa-caret-down"></i></button> <!--Sidebutton Phone Mode-->
-  <button class="sideBtnPhone upBtn" id="sideBtnUp" onclick="sidebuttonU()"><i class="fas fa-caret-up"></i></button> <!--Sidebutton Phone Mode-->
+  <button class="topBtnPhone downBtn" id="sideBtnDown" onclick="sidebuttonD()"><i class="fas fa-caret-down"></i></button> <!--Sidebutton Phone Mode-->
+  <button class="topBtnPhone upBtn" id="sideBtnUp" onclick="sidebuttonU()"><i class="fas fa-caret-up"></i></button> <!--Sidebutton Phone Mode-->
   <nav id="nav">
     <ul class="navMenu"> <!--Menu-->
       <a href="#"><li class="menuText" id="op1">INICIO</li></a>
