--- a/marcas.html
+++ b/marcas.html
@@ -50,86 +50,91 @@
   <div class="main">
     <div class="welcome">
     </br><h1><b>As nossas marcas</b></h1></br></br>
-    <div style="width:100%; float:left;font-size:1.3em; margin-bottom:10px; color:#000;" ><h2>Adubos</h2></div>
+    <div class="marcasGallery"><h2>Adubos</h2>
       <a href="" >
         <div>
-          <img src="Images/marcas/deiba.png" style="float:left;" width="150px">
+          <img src="Images/marcas/deiba.png" class="marcaGallery">
         </div>
       </a>
       <a href="" >
         <div >
-          <img src="Images/marcas/cadubal.png" style="float:left; " width="150px">
+          <img src="Images/marcas/cadubal.png" class="marcaGallery">
         </div>
       </a>
       <a href="">
         <div >
-          <img src="Images/marcas/nutrofertil.png" width="150px">
+          <img src="Images/marcas/nutrofertil.png" class="marcaGallery">
         </div>
       </a></br>
-    
-    <div style="width:100%; float:left;font-size:1.3em; margin-bottom:10px; color:#000;"><h2>Agroquimicos</h2></div>
-      <a href="" >
-        <div>
-          <img src="Images/marcas/basf.png" style="float:left;" width="150px">
-        </div>
-      </a>
-      <a href="" >
-        <div >
-          <img src="Images/marcas/belchim.png" style="float:left; " width="150px">
-        </div>
-      </a>
-      <a href="">
-        <div >
-          <img src="Images/marcas/epagro.png" style="float:left; " width="150px">
-        </div>
-      </a>
-      <a href="" >
-        <div>
-          <img src="Images/marcas/iqv.png" width="150px">
-        </div>
-      </a></br>
-    
-  
-    <div style="width:100%; float:left;font-size:1.3em; margin-bottom:10px; color:#000;"><h2>Alimentação Aminal</h2></div>
-      <a href="" >
-        <div>
-          <img src="Images/marcas/biona.png" width="150px">
-        </div>
-      </a></br>
-  
-      <div style="width:100%; float:left;font-size:1.3em; margin-bottom:10px; color:#000;"><h2>Petcare</h2></div>
-      <a href="" >
-        <div>
-          <img src="Images/marcas/agrolex.png" width="150px">
-        </div>
-      </a></br>
-  
-      <div style="width:100%; float:left;font-size:1.3em; margin-bottom:10px; color:#000;"><h2>Veterinária</h2></div>
+    </div>
+
+    <div class="marcasGallery"><h2>Agroquimicos</h2>
       <a href="">
         <div>
-          <img src="Images/marcas/fertiprado.png" style="float:left; " width="150px">
+          <img src="Images/marcas/basf.png" class="float:left;" width="150px">
         </div>
       </a>
       <a href="">
         <div>
-          <img src="Images/marcas/fito.png" width="150px">
+          <img src="Images/marcas/belchim.png" class="marcaGallery">
         </div>
-      </a></br>
-  
-      <div style="width:100%; float:left;font-size:1.3em; margin-bottom:10px; color:#000;"><h2>Bricolage</h2></div>
-      <a href="" >
-        <div>
-          <img src="Images/marcas/einhell.png" width="150px">
-        </div>
-      </a></br>
-  
-      <div style="width:100%; float:left;font-size:1.3em; margin-bottom:10px; color:#000;"><h2>Máquinas</h2></div>
+      </a>
       <a href="">
         <div>
-          <img src="Images/marcas/lena.png" width="150px">
+          <img src="Images/marcas/epagro.png" class="marcaGallery">
+        </div>
+      </a>
+      <a href="">
+        <div>
+          <img src="Images/marcas/iqv.png" class="marcaGallery">
         </div>
       </a></br>
-  </div>  
+    </div>
+
+    <div class="marcasGallery"><h2>Alimentação Aminal</h2>
+      <a href="">
+        <div>
+          <img src="Images/marcas/biona.png" class="marcaGallery">
+        </div>
+      </a></br>
+    </div>
+
+      <div class="marcasGallery"><h2>Petcare</h2>
+      <a href="">
+        <div>
+          <img src="Images/marcas/agrolex.png" class="marcaGallery">
+        </div>
+      </a></br>
+    </div>
+
+      <div class="marcasGallery"><h2>Veterinária</h2>
+      <a href="">
+        <div>
+          <img src="Images/marcas/fertiprado.png" class="marcaGallery">
+        </div>
+      </a>
+      <a href="">
+        <div>
+          <img src="Images/marcas/fito.png" class="marcaGallery">
+        </div>
+      </a></br>
+    </div>
+
+      <div class="marcasGallery"><h2>Bricolage</h2>
+      <a href="">
+        <div>
+          <img src="Images/marcas/einhell.png" class="marcaGallery">
+        </div>
+      </a></br>
+    </div>
+
+      <div class="marcasGallery"><h2>Máquinas</h2>
+      <a href="">
+        <div>
+          <img src="Images/marcas/lena.png" class="marcaGallery">
+        </div>
+      </a></br>
+    </div>  
   </div>
   
 
