--- a/marcas.html
+++ b/marcas.html
@@ -48,7 +48,6 @@
     </ul>
   </nav>
   <div class="main">
-    <div class="welcome">
     </br><h1><b>As nossas marcas</b></h1></br></br>
     <div class="marcasGallery"><h2>Adubos</h2>
       <a href="" >
@@ -67,11 +66,10 @@
         </div>
       </a></br>
     </div>
-
     <div class="marcasGallery"><h2>Agroquimicos</h2>
       <a href="">
         <div>
-          <img src="Images/marcas/basf.png" class="float:left;" width="150px">
+          <img src="Images/marcas/basf.png" class="marcaGallery">
         </div>
       </a>
       <a href="">
@@ -90,7 +88,6 @@
         </div>
       </a></br>
     </div>
-
     <div class="marcasGallery"><h2>Alimentação Aminal</h2>
       <a href="">
         <div>
@@ -98,7 +95,6 @@
         </div>
       </a></br>
     </div>
-
       <div class="marcasGallery"><h2>Petcare</h2>
       <a href="">
         <div>
@@ -106,7 +102,6 @@
         </div>
       </a></br>
     </div>
-
       <div class="marcasGallery"><h2>Veterinária</h2>
       <a href="">
         <div>
@@ -119,7 +114,6 @@
         </div>
       </a></br>
     </div>
-
       <div class="marcasGallery"><h2>Bricolage</h2>
       <a href="">
         <div>
@@ -127,7 +121,6 @@
         </div>
       </a></br>
     </div>
-
       <div class="marcasGallery"><h2>Máquinas</h2>
       <a href="">
         <div>
@@ -136,9 +129,6 @@
       </a></br>
     </div>  
   </div>
-  
-
-  
 </body>
 <footer class="footerBottom"> <!--Footer-->
   <div class="wheretofindusFooter">
