--- a/marcas.html
+++ b/marcas.html
@@ -48,7 +48,10 @@
     </ul>
   </nav>
   <div class="main">
-    </br><h1><b>As nossas marcas</b></h1></br></br>
+    <!-- </br>
+    <h1><b>As nossas marcas</b></h1>
+    </br>
+    </br>
     <div class="marcasGallery"><h2>Adubos</h2>
       <a href="" >
         <div>
@@ -64,7 +67,7 @@
         <div >
           <img src="Images/marcas/nutrofertil.png" class="marcaGallery">
         </div>
-      </a></br>
+      </a>
     </div>
     <div class="marcasGallery"><h2>Agroquimicos</h2>
       <a href="">
@@ -86,21 +89,21 @@
         <div>
           <img src="Images/marcas/iqv.png" class="marcaGallery">
         </div>
-      </a></br>
+      </a>
     </div>
-    <div class="marcasGallery"><h2>Alimentação Aminal</h2>
+    <div class="marcasGallery"><h2>Alimentação Animal</h2>
       <a href="">
         <div>
           <img src="Images/marcas/biona.png" class="marcaGallery">
         </div>
-      </a></br>
+      </a>
     </div>
       <div class="marcasGallery"><h2>Petcare</h2>
       <a href="">
         <div>
           <img src="Images/marcas/agrolex.png" class="marcaGallery">
         </div>
-      </a></br>
+      </a>
     </div>
       <div class="marcasGallery"><h2>Veterinária</h2>
       <a href="">
@@ -112,23 +115,23 @@
         <div>
           <img src="Images/marcas/fito.png" class="marcaGallery">
         </div>
-      </a></br>
+      </a>
     </div>
       <div class="marcasGallery"><h2>Bricolage</h2>
       <a href="">
         <div>
           <img src="Images/marcas/einhell.png" class="marcaGallery">
         </div>
-      </a></br>
+      </a>
     </div>
       <div class="marcasGallery"><h2>Máquinas</h2>
       <a href="">
         <div>
           <img src="Images/marcas/lena.png" class="marcaGallery">
         </div>
-      </a></br>
-    </div>  
-  </div>
+      </a>
+    </div>-->
+  </div> 
 </body>
 <footer class="footerBottom"> <!--Footer-->
   <div class="wheretofindusFooter">
