--- a/marcas.html
+++ b/marcas.html
@@ -48,7 +48,7 @@
     </ul>
   </nav>
   <div class="main">
-    <!-- </br>
+    </br>
     <h1><b>As nossas marcas</b></h1>
     </br>
     </br>
@@ -130,7 +130,7 @@
           <img src="Images/marcas/lena.png" class="marcaGallery">
         </div>
       </a>
-    </div>-->
+    </div>
   </div> 
 </body>
 <footer class="footerBottom"> <!--Footer-->
