--- a/marcas.html
+++ b/marcas.html
@@ -49,8 +49,7 @@
   </nav>
   <div class="main">
     </br>
-    <h1><b>As nossas marcas</b></h1>
-    </br>
+    <h1 class="titleBrands"><b>As nossas marcas</b></h1>
     </br>
     <div class="marcasGallery"><h2>Adubos</h2>
       <a href="" >
