--- a/index.html
+++ b/index.html
@@ -20,13 +20,8 @@
         <a href="index.html"><img src="Images/logo.png" alt="logo" class="logoIMG"></a> <!--Logo Lavricartaxo-->
       </div>
 
-      <!--Search Bar-->
-    <div class="search">
-      <a onclick="searchBar()" id="searchMG"><i class="fas fa-search searchMG"></i></a>
-      <input type="text" class="searchBar" id="searchBar" placeholder="Procurar...">
-    </div>
-    <!--End Search Bar-->
     
+
       <div class="weatherWidget"> <!--Div weather widget PC-->
         <div id="weatherWidget" >
           <script type="text/javascript" async src="JS/weatherWidget.js"></script> <!--Weather width PC-->
@@ -67,13 +62,22 @@
 
     <!--Slideshow-->
     <div class="slideshow">
-      <img src="Images/slideshow/bowl_tomatos.jpg" alt="" class="slideshowimgs">
-      <img src="Images/slideshow/plant.jpg" alt="" class="slideshowimgs">
-      <img src="Images/slideshow/view.jpg" alt="" class="slideshowimgs">
-      <img src="Images/slideshow/tractor.jpg" alt="" class="slideshowimgs">
+      <img src="Images/slideshow/bowl_tomatos.jpg" class="slideshowimgs">
+      <img src="Images/slideshow/plant.jpg" class="slideshowimgs">
+      <img src="Images/slideshow/view.jpg" class="slideshowimgs">
+      <img src="Images/slideshow/tractor.jpg" class="slideshowimgs">
     </div>
     <!--End-->
     
+    <!--Search Bar-->
+    <div class="search">
+      <a onclick="closeSearchBar()" id="closeSearch"><i class="fas fa-angle-left closeSearch"></i></a>
+      <a onclick="openSearchBar()" id="openSearch"><i class="fas fa-angle-right openSearch"></i></a>
+      <input type="text" class="searchBar" id="searchBar" placeholder="Procurar...">
+      <a onclick="searchBar()" id="searchMG"><i class="fas fa-search searchMG"></i></a>
+    </div>
+    <!--End Search Bar-->
+
     <div class="welcome"> <!--Text-->
       <p><br><h2><b>Seja bem vindo ao nosso site</b></h2><br>É com enorme prazer que registamos a sua presença no nosso site, esperamos que encontre tudo o que precisa para realizar os seus projectos com sucesso!.<br><br>A LAVRICARTAXO - Cooperativa Agro-Pecuária do Cartaxo, C.R.L.. coloca ao seu dispôr uma vasta equipa para que possa ter todo o apoio que<br>considere necessário.<br><br>O nosso objectivo é servir os nossos clientes com competência e dedicação para que o nosso cliente volte sempre!<br><br>Ao adquirir produtos na nossa empresa deve saber que estará sempre a comprar qualidade ao melhor preço! Volte sempre, será sempre um gosto tê-lo de volta!</p>
     </div> 
