--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
     <!--End-->
     
     <!--Search Bar-->
-    <div class="search">
+    <!-- <div class="search">
       <a onclick="closeSearchBar()" id="closeSearch"><i class="fas fa-angle-left closeSearch"></i></a>
       <a onclick="openSearchBar()" id="openSearch"><i class="fas fa-angle-right openSearch"></i></a>
       <input type="text" class="searchBar" id="searchBar" placeholder="Procurar...">
       <a onclick="searchBar()" id="searchMG"><i class="fas fa-search searchMG"></i></a>
-    </div>
+    </div> -->
     <!--End Search Bar-->
 
     <div class="welcome"> <!--Text-->
@@ -222,6 +222,9 @@
   </div><!--/Main-->
 </body>
 <footer class="footerBottom"> <!--Footer-->
+  <div class="icondivFooter">
+    <img src="Images/icon.png" class="iconFooter">
+  </div>
   <div class="wheretofindusFooter">
     <p>ONDE NOS ENCONTRAR<br><br>Rua Batalhoz Nr.81<br>2070-069 Cartaxo<br>Portugal</p>
   </div>
@@ -229,14 +232,21 @@
     <p>CONTACTE-NOS<br><br>243 700 240<br>243 700 249</p>
   </div>
   <div class="openFooter">
-    <p><br><br>Sábados<br>9H - 12:30H</p>
+    <p>ATENDIMENTO<br><br>Segunda a Sexta-feira<br>9H - 13H<br>14:30H - 18:30H</p>
   </div>
   <div class="openFooterI">
-    <p>ATENDIMENTO<br><br>Segunda a Sexta-feira<br>9H - 13H<br>14:30H - 18:30H</p>
+    <p><br><br>Sábados<br>9H - 12:30H</p>
+  </div>
+  <!-- <div class="suporteFooter">
+    <p>SUPORTE<br><br><a href="#">Questões Frequentes</a><br><a href="">Contacte-nos</a><br><a href="https://www.livroreclamacoes.pt">Livro de reclamações eletronico</a></p>
+  </div> -->
+  <div class="suporteFooter">
+    <p>SUPORTE<br><br>Questões Frequentes<br>Contacte-nos<br>Livro de reclamações eletronico</p>
   </div>
   <div class="copyright">
     <p>Copyright &copy; 2021 Lavricartaxo-Cooperativa Agro-Pecuária do Cartaxo, C.R.L.</p>
   </div>
+  
   <div class="desendesign">
     <p>Desenvolvimento e Design:<a href="https://www.analogia.net/?opx=entrar">ANALOGIA.NET</a></p>
   </div> 
