--- a/associados.html
+++ b/associados.html
@@ -52,6 +52,9 @@
     </div>
 </body>
 <footer class="footerBottom"> <!--Footer-->
+  <div class="icondivFooter">
+    <img src="Images/icon.png" class="iconFooter">
+  </div>
   <div class="wheretofindusFooter">
     <p>ONDE NOS ENCONTRAR<br><br>Rua Batalhoz Nr.81<br>2070-069 Cartaxo<br>Portugal</p>
   </div>
@@ -59,14 +62,21 @@
     <p>CONTACTE-NOS<br><br>243 700 240<br>243 700 249</p>
   </div>
   <div class="openFooter">
-    <p><br><br>Sábados<br>9H - 12:30H</p>
+    <p>ATENDIMENTO<br><br>Segunda a Sexta-feira<br>9H - 13H<br>14:30H - 18:30H</p>
   </div>
   <div class="openFooterI">
-    <p>ATENDIMENTO<br><br>Segunda a Sexta-feira<br>9H - 13H<br>14:30H - 18:30H</p>
+    <p><br><br>Sábados<br>9H - 12:30H</p>
+  </div>
+  <!-- <div class="suporteFooter">
+    <p>SUPORTE<br><br><a href="#">Questões Frequentes</a><br><a href="">Contacte-nos</a><br><a href="https://www.livroreclamacoes.pt">Livro de reclamações eletronico</a></p>
+  </div> -->
+  <div class="suporteFooter">
+    <p>SUPORTE<br><br>Questões Frequentes<br>Contacte-nos<br>Livro de reclamações eletronico</p>
   </div>
   <div class="copyright">
     <p>Copyright &copy; 2021 Lavricartaxo-Cooperativa Agro-Pecuária do Cartaxo, C.R.L.</p>
   </div>
+  
   <div class="desendesign">
     <p>Desenvolvimento e Design:<a href="https://www.analogia.net/?opx=entrar">ANALOGIA.NET</a></p>
   </div> 
