--- a/contatos.html
+++ b/contatos.html
@@ -148,7 +148,7 @@
     <p>SUPORTE<br><br><a href="#">Questões Frequentes</a><br><a href="">Contacte-nos</a><br><a href="https://www.livroreclamacoes.pt">Livro de reclamações eletronico</a></p>
   </div> -->
   <div class="suporteFooter">
-    <p>SUPORTE<br><br>Questões Frequentes<br>Contacte-nos<br>Livro de reclamações eletronico</p>
+    <p>SUPORTE<br><br>Questões Frequentes<br>Contacte-nos<br>Livro de reclamações</p>
   </div>
   <div class="copyright">
     <p>Copyright &copy; 2021 Lavricartaxo-Cooperativa Agro-Pecuária do Cartaxo, C.R.L.</p>
