--- a/associados.html
+++ b/associados.html
@@ -68,7 +68,7 @@
     <p><br><br>Sábados<br>9H - 12:30H</p>
   </div>
   <div class="suporteFooter">
-    <p>SUPORTE<br><br>Questões Frequentes<a href="contatos.html"><p>Contatos</p></a>
+    <p>SUPORTE<br><br>Questões Frequentes<a href="contatos.html">Contatos</a></p>
   </div>
   <div  class="livrodereclamacoesFooter">
     <a href="https://www.livroreclamacoes.pt"><img src="Images/rb.png" class="livrodereclamacoes"></a>
