--- a/index.html
+++ b/index.html
@@ -82,6 +82,34 @@
       <p><br><h2><b>Seja bem vindo ao nosso site</b></h2><br>É com enorme prazer que registamos a sua presença no nosso site, esperamos que encontre tudo o que precisa para realizar os seus projectos com sucesso!.<br><br>A LAVRICARTAXO - Cooperativa Agro-Pecuária do Cartaxo, C.R.L.. coloca ao seu dispôr uma vasta equipa para que possa ter todo o apoio que considere necessário.<br><br>O nosso objectivo é servir os nossos clientes com competência e dedicação para que o nosso cliente volte sempre!<br><br>Ao adquirir produtos na nossa empresa deve saber que estará sempre a comprar qualidade ao melhor preço! Volte sempre, será sempre um gosto tê-lo de volta!</p>
     </div> 
     <br>
+
+    <div class="productsCategories">
+      <div class="productsCategoriesplaceHolders">
+        <img src="Images/productsCategoriesPlaceholders/adubos.jpg">
+      </div>
+      <div class="productsCategoriesplaceHolders">
+        <img src="Images/productsCategoriesPlaceholders/agroquimicos.jpg">
+      </div>
+      <div class="productsCategoriesplaceHolders">
+        <img src="Images/productsCategoriesPlaceholders/alimentacao.jpg">
+      </div>
+      <div class="productsCategoriesplaceHolders">
+        <img src="Images/productsCategoriesPlaceholders/bricolage.jpg">
+      </div>
+      <div class="productsCategoriesplaceHolders">
+        <img src="Images/productsCategoriesPlaceholders/maquinas.jpg">
+      </div>
+      <div class="productsCategoriesplaceHolders">
+        <img src="Images/productsCategoriesPlaceholders/petcare.jpg">
+      </div>
+      <div class="productsCategoriesplaceHolders">
+        <img src="Images/productsCategoriesPlaceholders/servicos.jpg">
+      </div>
+      <div class="productsCategoriesplaceHolders">
+        <img src="Images/productsCategoriesPlaceholders/verterinaria.jpg">
+      </div>
+    </div>
+
     <!--Carousel-->
     <div class="marcass">
       <div class="marcas">
