--- a/index.html
+++ b/index.html
@@ -82,31 +82,42 @@
       <p><br><h2><b>Seja bem vindo ao nosso site</b></h2><br>É com enorme prazer que registamos a sua presença no nosso site, esperamos que encontre tudo o que precisa para realizar os seus projectos com sucesso!.<br><br>A LAVRICARTAXO - Cooperativa Agro-Pecuária do Cartaxo, C.R.L.. coloca ao seu dispôr uma vasta equipa para que possa ter todo o apoio que considere necessário.<br><br>O nosso objectivo é servir os nossos clientes com competência e dedicação para que o nosso cliente volte sempre!<br><br>Ao adquirir produtos na nossa empresa deve saber que estará sempre a comprar qualidade ao melhor preço! Volte sempre, será sempre um gosto tê-lo de volta!</p>
     </div> 
     <br>
-
+    <div class="tittleProductCategory">
+      <p>Categorias de produtos</p>
+    </div>
+    <br>
     <div class="productsCategories">
       <div class="productsCategoriesplaceHolders">
-        <img src="Images/productsCategoriesPlaceholders/adubos.jpg">
+        <img src="Images/productsCategoriesPlaceholders/adubos.jpg" class="placeholder">
+        <i class="fab fa-pagelines categoriesIcons"></i>
+      </div>
+      <d  iv class="productsCategoriesplaceHolders">
+        <img src="Images/productsCategoriesPlaceholders/agroquimicos.jpg" class="placeholder">
+        <i class="fas fa-microscope categoriesIcons"></i>
       </div>
       <div class="productsCategoriesplaceHolders">
-        <img src="Images/productsCategoriesPlaceholders/agroquimicos.jpg">
+        <img src="Images/productsCategoriesPlaceholders/alimentacao.jpg" class="placeholder">
+        <i class="fas fa-horse-head categoriesIcons"></i>
       </div>
       <div class="productsCategoriesplaceHolders">
-        <img src="Images/productsCategoriesPlaceholders/alimentacao.jpg">
+        <img src="Images/productsCategoriesPlaceholders/bricolage.jpg" class="placeholder">
+        <i class="fas fa-hammer categoriesIcons"></i>
       </div>
       <div class="productsCategoriesplaceHolders">
-        <img src="Images/productsCategoriesPlaceholders/bricolage.jpg">
+        <img src="Images/productsCategoriesPlaceholders/maquinas.jpg" class="placeholder">
+        <i class="fas fa-tractor categoriesIcons"></i>
       </div>
       <div class="productsCategoriesplaceHolders">
-        <img src="Images/productsCategoriesPlaceholders/maquinas.jpg">
+        <img src="Images/productsCategoriesPlaceholders/petcare.jpg" class="placeholder">
+        <i class="fas fa-paw categoriesIcons"></i>
       </div>
       <div class="productsCategoriesplaceHolders">
-        <img src="Images/productsCategoriesPlaceholders/petcare.jpg">
+        <img src="Images/productsCategoriesPlaceholders/servicos.jpg" class="placeholder">
+        <i class="fas fa-book categoriesIcons"></i>
       </div>
       <div class="productsCategoriesplaceHolders">
-        <img src="Images/productsCategoriesPlaceholders/servicos.jpg">
-      </div>
-      <div class="productsCategoriesplaceHolders">
-        <img src="Images/productsCategoriesPlaceholders/verterinaria.jpg">
+        <img src="Images/productsCategoriesPlaceholders/verterinaria.jpg" class="placeholder">
+        <i class="fas fa-stethoscope categoriesIcons"></i>
       </div>
     </div>
 
