--- a/index.html
+++ b/index.html
@@ -87,43 +87,35 @@
     </div>
     <br>
     <div class="productsCategories">
-      <div class="productsCategoriesplaceHolders" id="c_ad">
-        <!-- <img src="Images/productsCategoriesPlaceholders/adubos.jpg" class="placeholder"> -->
+      <div class="productsCategoriesplaceHolders">
         <i class="fab fa-pagelines categoriesIcons"></i>
         <p class="tituloCategoria">ADUBOS</p>
       </div>
-      <div class="productsCategoriesplaceHolders" id="c_ag">
-        <!-- <img src="Images/productsCategoriesPlaceholders/agroquimicos.jpg" class="placeholder"> -->
+      <div class="productsCategoriesplaceHolders">
         <i class="fas fa-microscope categoriesIcons"></i>
         <p class="tituloCategoria">AGROQUIMICOS</p>
       </div>
-      <div class="productsCategoriesplaceHolders" id="c_aa">
-        <!-- <img src="Images/productsCategoriesPlaceholders/alimentacao.jpg" class="placeholder"> -->
+      <div class="productsCategoriesplaceHolders">
         <i class="fas fa-horse-head categoriesIcons"></i>
         <p class="tituloCategoria">ALIMENTAÇÃO ANIMAL</p>
       </div>
-      <div class="productsCategoriesplaceHolders" id="c_b">
-        <!-- <img src="Images/productsCategoriesPlaceholders/bricolage.jpg" class="placeholder"> -->
+      <div class="productsCategoriesplaceHolders">
         <i class="fas fa-hammer categoriesIcons"></i>
         <p class="tituloCategoria">BRICOLAGE</p>
       </div>
-      <div class="productsCategoriesplaceHolders" id="c_m">
-        <!-- <img src="Images/productsCategoriesPlaceholders/maquinas.jpg" class="placeholder"> -->
+      <div class="productsCategoriesplaceHolders">
         <i class="fas fa-tractor categoriesIcons"></i>
         <p class="tituloCategoria">MÁQUINA</p>
       </div>
-      <div class="productsCategoriesplaceHolders" id="c_p">
-        <!-- <img src="Images/productsCategoriesPlaceholders/petcare.jpg" class="placeholder"> -->
+      <div class="productsCategoriesplaceHolders">
         <i class="fas fa-paw categoriesIcons"></i>
         <p class="tituloCategoria">PETCARE</p>
       </div>
-      <div class="productsCategoriesplaceHolders" id="c_s">
-        <!-- <img src="Images/productsCategoriesPlaceholders/servicos.jpg" class="placeholder"> -->
+      <div class="productsCategoriesplaceHolders">
         <i class="fas fa-book categoriesIcons"></i>
         <p class="tituloCategoria">SERVIÇOS</p>
       </div>
-      <div class="productsCategoriesplaceHolders" id="c_v">
-        <!-- <img src="Images/productsCategoriesPlaceholders/verterinaria.jpg" class="placeholder"> -->
+      <div class="productsCategoriesplaceHolders">
         <i class="fas fa-stethoscope categoriesIcons"></i>
         <p class="tituloCategoria">VETERENÁRIA</p>
       </div>
