--- a/associados.html
+++ b/associados.html
@@ -48,7 +48,29 @@
     </ul>
   </nav>
     <div class="main">
-     
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
     </div>
 </body>
 <footer class="footerBottom"> <!--Footer-->
@@ -68,7 +90,7 @@
     <p><br><br>Sábados<br>9H - 12:30H</p>
   </div>
   <div class="suporteFooter">
-    <p>SUPORTE<br><br>Questões Frequentes<a href="contatos.html">Contatos</a></p>
+    <p>SUPORTE<br><br>Questões Frequentes<a href="contatos.html"><p>Contatos</p></a>
   </div>
   <div  class="livrodereclamacoesFooter">
     <a href="https://www.livroreclamacoes.pt"><img src="Images/rb.png" class="livrodereclamacoes"></a>
