--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <br>
     <br>
     <div class="tittleProductCategory">
-      <p>Categorias de produtos</p>
+      <p>Categorias</p>
     </div>
     <br>
     <br>
@@ -130,6 +130,9 @@
           <p class="tituloCategoria">VETERENÁRIA</p>
         </div>
       </a>      
+    </div>
+    <div>
+      <img src="Images/lavricartaxoPlace.PNG">
     </div>
     <!--carousel-->
     <div class="marcass">
@@ -199,7 +202,6 @@
             <img src="Images/marcas/iqv.png" onmouseover="brandPause()" onmouseout="brandUnpause()">
           </div>
         </a><!--End carousel-->
-      
         <!--Double Brands-->
         <a href="" >
           <div class="marca">
