--- a/galeria.html
+++ b/galeria.html
@@ -77,6 +77,9 @@
       <div class="photo">
         <img src="Images/gallery/sheeps.jpg" class="photoWH" onclick="openModal();currentSlide(9)">
       </div>
+      <!-- <div class="photo">
+        <img src="Images/lavricartaxoPlace.PNG" class="photoWH" onclick="openModal();currentSlide(10)">
+      </div> -->
     </div>
   <div id="imageView" class="modal">
     <div class="close" onclick="closeModal()">
@@ -109,7 +112,10 @@
         </div>
         <div class="mySlides">
           <img src="Images/gallery/sheeps.jpg" class="photoWHV">
-        </div>      
+        </div>     
+        <!-- <div class="mySlides">
+          <img src="Images/lavricartaxoPlace.PNG" class="photoWHV">
+        </div>  -->
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
         <a class="next" onclick="plusSlides(1)">&#10095;</a>
         <!-- /Image View -->
