--- a/index.html
+++ b/index.html
@@ -49,6 +49,16 @@
       <a href="associados.html"><li class="menuText" id="op7">ASSOCIADOS</li></a>
     </ul>
   </nav>
+  <div class="dropDownProducsMenu">
+    <a href="produtos.html"><li class="selectPM">ADUBOS</li></a>
+    <a href="produtos.html"><li class="selectPM">AGROQUIMICOS</li></a>
+    <a href="produtos.html"><li class="selectPM">ALIMENTAÇÃO ANIMAL</li></a>
+    <a href="contatos.html"><li class="selectPM">BRICOLAGE</li></a>
+    <a href="produtos.html"><li class="selectPM">MÁQUINA</li></a>
+    <a href="produtos.html"><li class="selectPM">PETCARE</li></a>
+    <a href="produtos.html"><li class="selectPM">SERVIÇOS</li></a>
+    <a href="produtos.html"><li class="selectPM">VETERENÁRIA</li></a>
+  </div>
   <div class="main"> <!--"Body"/Main/Content-->
     <div class="news"> <!--Div news widget-->
       <script type="text/javascript" src="JS/newsWidget.js?widgettitle=Noticías&amp;categories=126,127,128,129,&amp;showRelease=0&amp;width=auto&amp;headlinebold=1&amp;headlinesonly=1&amp;headlinecolor=black&amp;briefcolor=696969&amp;textcolor=black&amp;typeface=sans-serif&amp;fontsize=11&amp;width=auto&amp;headlinesepstyle=solid&amp;showimages=0&amp;numstories=5&amp;bgcolor=rgba(255, 255, 255, 0)&amp;urldest=247pr"></script> <!--News widget-->
@@ -131,9 +141,9 @@
         </div>
       </a>      
     </div>
-    <div>
+    <!-- <div>
       <img src="Images/lavricartaxoPlace.PNG">
-    </div>
+    </div> -->
     <!--carousel-->
     <div class="marcass">
       <div class="marcas">
