--- a/index.html
+++ b/index.html
@@ -43,13 +43,14 @@
       <a href="#"><li class="menuText" id="op1">INICIO</li></a>
       <a href="quemsomos.html"><li class="menuText" id="op2">QUEM SOMOS</li></a>
       <a href="galeria.html"><li class="menuText" id="op3">GALERIA</li></a>
+      <!-- <a href="produtos.html"><li class="menuText" id="op4">PRODUTOS <i class="fas fa-angle-down downArrow"></i></li></a> -->
       <a href="produtos.html"><li class="menuText" id="op4">PRODUTOS</li></a>
       <a href="contatos.html"><li class="menuText" id="op5">CONTATOS</li></a>
       <a href="marcas.html"><li class="menuText" id="op6">MARCAS</li></a>
       <a href="associados.html"><li class="menuText" id="op7">ASSOCIADOS</li></a>
     </ul>
   </nav>
-  <div class="dropDownProducsMenu">
+  <!-- <div class="dropDownProducsMenu">
     <a href="produtos.html"><li class="selectPM">ADUBOS</li></a>
     <a href="produtos.html"><li class="selectPM">AGROQUIMICOS</li></a>
     <a href="produtos.html"><li class="selectPM">ALIMENTAÇÃO ANIMAL</li></a>
@@ -58,7 +59,7 @@
     <a href="produtos.html"><li class="selectPM">PETCARE</li></a>
     <a href="produtos.html"><li class="selectPM">SERVIÇOS</li></a>
     <a href="produtos.html"><li class="selectPM">VETERENÁRIA</li></a>
-  </div>
+  </div> -->
   <div class="main"> <!--"Body"/Main/Content-->
     <div class="news"> <!--Div news widget-->
       <script type="text/javascript" src="JS/newsWidget.js?widgettitle=Noticías&amp;categories=126,127,128,129,&amp;showRelease=0&amp;width=auto&amp;headlinebold=1&amp;headlinesonly=1&amp;headlinecolor=black&amp;briefcolor=696969&amp;textcolor=black&amp;typeface=sans-serif&amp;fontsize=11&amp;width=auto&amp;headlinesepstyle=solid&amp;showimages=0&amp;numstories=5&amp;bgcolor=rgba(255, 255, 255, 0)&amp;urldest=247pr"></script> <!--News widget-->
