--- a/contatos.html
+++ b/contatos.html
@@ -17,7 +17,7 @@
     <script src="JS/script.js"></script>
     <title>Lavricartaxo</title>
 </head>
-<body>
+<body onresize="resize()">
   <div class="header"> <!--Header-->
     <div class="top"> <!--Header Subsection Top-->
       <div class="logo"> <!--Div logo-->
