--- a/produtos.html
+++ b/produtos.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-pt">
-
 <head>
   <meta charset="UTF-8">
-  <meta name="keywords" content="Cooperativa agricola do Cartaxo, Vinhas, Vinhos, adubos, agroquimicos, fitofarmacos, sementes, batatas, rações">
-  <meta name="description" content="LAVRICARTAXO Cooperativa agricola do Cartaxo, Vinhas, Vinhos, adubos, agroquimicos, fitofarmacos, sementes, batatas, rações">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/jpg" href="Images/icon.png" />
-  <link rel="stylesheet" href="CSS/style.css" type="text/css">
-  <script src="JS/script.js"></script>
-  <title>Lavricartaxo</title>
+      <meta name="keywords" content="Cooperativa agricola do Cartaxo, Vinhas, Vinhos, adubos, agroquimicos, fitofarmacos, sementes, batatas, rações">
+      <meta name="description" content="LAVRICARTAXO Cooperativa agricola do Cartaxo, Vinhas, Vinhos, adubos, agroquimicos, fitofarmacos, sementes, batatas, rações">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="icon" type="image/jpg" href="Images/icon.png" />
+      <link rel="stylesheet" href="fontawesome/css/all.css">
+      <link rel="stylesheet" href="fontawesome/css/all.min.css">     
+      <link rel="stylesheet" href="CSS/style.css" type="text/css">
+      <script src="JS/script.js"></script>
+      <title>Lavricartaxo</title>
 </head>
   
-<body>
+<body onresize="resize()">
   <div class="header"> <!--Header-->
     <div class="top"> <!--Header Subsection Top-->
       <div class="logo"> <!--Div logo-->
@@ -36,8 +37,6 @@
       </div>          
     </div>    
   </div>
-  <button class="topBtnPhone downBtn" id="sideBtnDown" onclick="sidebuttonD()"><i class="fas fa-caret-down"></i></button> <!--Sidebutton Phone Mode-->
-  <button class="topBtnPhone upBtn" id="sideBtnUp" onclick="sidebuttonU()"><i class="fas fa-caret-up"></i></button> <!--Sidebutton Phone Mode-->
   <button class="topBtnPhone downBtn" id="sideBtnDown" onclick="sidebuttonD()"><i class="fas fa-caret-down"></i></button> <!--Sidebutton Phone Mode-->
   <button class="topBtnPhone upBtn" id="sideBtnUp" onclick="sidebuttonU()"><i class="fas fa-caret-up"></i></button> <!--Sidebutton Phone Mode-->
   <nav id="nav">
