--- a/index.html
+++ b/index.html
@@ -150,133 +150,133 @@
       <div class="marcas">
         <a href="" >
           <div class="marca">
-            <img src="Images/marcas/agrolex.png" onmouseover="brandPause()" onmouseout="brandUnpause()">
+            <img src="Images/marcas/agrolex.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/sirosubs.png" onmouseover="brandPause()" onmouseout="brandUnpause()">
+            <img src="Images/marcas/sirosubs.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/belchim.png" onmouseover="brandPause()" onmouseout="brandUnpause()">
+            <img src="Images/marcas/belchim.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/nutrofertil.png" onmouseover="brandPause()" onmouseout="brandUnpause()">
+            <img src="Images/marcas/nutrofertil.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/biona.png" onmouseover="brandPause()" onmouseout="brandUnpause()">
+            <img src="Images/marcas/biona.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/cadubal.png" onmouseover="brandPause()" onmouseout="brandUnpause()">
+            <img src="Images/marcas/cadubal.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/deiba.png" onmouseover="brandPause()" onmouseout="brandUnpause()">
+            <img src="Images/marcas/deiba.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/lena.png" onmouseover="brandPause()" onmouseout="brandUnpause()">
+            <img src="Images/marcas/lena.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/einhell.png" onmouseover="brandPause()" onmouseout="brandUnpause()">
+            <img src="Images/marcas/einhell.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/epagro.png" onmouseover="brandPause()" onmouseout="brandUnpause()">
+            <img src="Images/marcas/epagro.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/fertiprado.png" onmouseover="brandPause()" onmouseout="brandUnpause()">
+            <img src="Images/marcas/fertiprado.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/fito.png" onmouseover="brandPause()" onmouseout="brandUnpause()">
+            <img src="Images/marcas/fito.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/iqv.png" onmouseover="brandPause()" onmouseout="brandUnpause()">
+            <img src="Images/marcas/iqv.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
           </div>
         </a><!--End carousel-->
         <!--Double Brands-->
         <a href="" >
           <div class="marca">
-            <img src="Images/marcas/agrolex.png" onmouseover="brandPause()" onmouseout="brandUnpause()">
+            <img src="Images/marcas/agrolex.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/sirosubs.png" onmouseover="brandPause()" onmouseout="brandUnpause()">
+            <img src="Images/marcas/sirosubs.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/belchim.png" onmouseover="brandPause()" onmouseout="brandUnpause()">
+            <img src="Images/marcas/belchim.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/nutrofertil.png" onmouseover="brandPause()" onmouseout="brandUnpause()">
+            <img src="Images/marcas/nutrofertil.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/biona.png" onmouseover="brandPause()" onmouseout="brandUnpause()">
+            <img src="Images/marcas/biona.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/cadubal.png" onmouseover="brandPause()" onmouseout="brandUnpause()">
+            <img src="Images/marcas/cadubal.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/deiba.png" onmouseover="brandPause()" onmouseout="brandUnpause()">
+            <img src="Images/marcas/deiba.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/lena.png" onmouseover="brandPause()" onmouseout="brandUnpause()">
+            <img src="Images/marcas/lena.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/einhell.png" onmouseover="brandPause()" onmouseout="brandUnpause()">
+            <img src="Images/marcas/einhell.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/epagro.png" onmouseover="brandPause()" onmouseout="brandUnpause()">
+            <img src="Images/marcas/epagro.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/fertiprado.png" onmouseover="brandPause()" onmouseout="brandUnpause()">
+            <img src="Images/marcas/fertiprado.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/fito.png" onmouseover="brandPause()" onmouseout="brandUnpause()">
+            <img src="Images/marcas/fito.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/iqv.png" onmouseover="brandPause()" onmouseout="brandUnpause()">
+            <img src="Images/marcas/iqv.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
           </div>
         </a><!--End carousel-->
       </div>
@@ -300,7 +300,7 @@
     <p><br><br>Sábados<br>9H - 12:30H</p>
   </div>
   <div class="suporteFooter">
-    <p>SUPORTE<br><br>Questões Frequentes<a href="contatos.html"><p>Contatos</p></a>
+    <p>SUPORTE<br><br>Questões Frequentes<br><a href="contatos.html">Contatos</a></p>
   </div>
   <div  class="livrodereclamacoesFooter">
     <a href="https://www.livroreclamacoes.pt"><img src="Images/rb.png" class="livrodereclamacoes"></a>
