--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
       <img src="Images/lavricartaxoPlace.PNG">
     </div> -->
     <!--carousel-->
+    <br>
     <div class="marcass">
       <div class="marcas">
         <a href="" >
@@ -280,6 +281,7 @@
           </div>
         </a><!--End carousel-->
       </div>
+      <br>
     </div><!--End-->
   </div><!--/Main-->
 </body>
@@ -303,7 +305,7 @@
     <p>SUPORTE<br><br>Questões Frequentes<br><a href="contatos.html">Contatos</a></p>
   </div>
   <div  class="livrodereclamacoesFooter">
-    <a href="https://www.livroreclamacoes.pt"><img src="Images/rb.png" class="livrodereclamacoes"></a>
+    <a href="https://www.livroreclamacoes.pt/inicio"><img src="Images/rb.png" class="livrodereclamacoes"></a>
   </div>
   <div class="copyright">
     <p>Copyright &copy; 2021 Lavricartaxo-Cooperativa Agro-Pecuária do Cartaxo, C.R.L.</p>
