--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
     <!--End-->
     
     <!--Search Bar-->
-    <!-- <div class="search">
+    <div class="search">
       <a onclick="closeSearchBar()" id="closeSearch"><i class="fas fa-angle-left closeSearch"></i></a>
       <a onclick="openSearchBar()" id="openSearch"><i class="fas fa-angle-right openSearch"></i></a>
       <input type="text" class="searchBar" id="searchBar" placeholder="Procurar...">
       <a onclick="searchBar()" id="searchMG"><i class="fas fa-search searchMG"></i></a>
-    </div> -->
+    </div>
     <!--End Search Bar-->
 
     <div class="welcome"> <!--Text-->
