--- a/produtos.html
+++ b/produtos.html
@@ -51,29 +51,62 @@
     </ul>
   </nav>
   <div class="main">
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
+  </br>
+    <div class="tittleProductCategory">
+      <p>Categorias</p>
+    </div>
+    <br>
+    <br>
+    <div class="productsCategories">
+      <a href="produtos.html">
+        <div class="productsCategoriesplaceHolders">
+          <i class="fab fa-pagelines categoriesIcons"></i>
+          <p class="tituloCategoria">ADUBOS</p>
+        </div>
+      </a>
+      <a href="produtos.html">
+        <div class="productsCategoriesplaceHolders">
+          <i class="fas fa-microscope categoriesIcons"></i>
+          <p class="tituloCategoria">AGROQUIMICOS</p>
+        </div>
+      </a>
+      <a href="produtos.html">
+        <div class="productsCategoriesplaceHolders">
+          <i class="fas fa-horse-head categoriesIcons"></i>
+          <p class="tituloCategoria">ALIMENTAÇÃO ANIMAL</p>
+        </div>
+      </a>
+      <a href="produtos.html">
+        <div class="productsCategoriesplaceHolders">
+          <i class="fas fa-hammer categoriesIcons"></i>
+          <p class="tituloCategoria">BRICOLAGE</p>
+        </div>
+      </a>
+      <a href="produtos.html">
+        <div class="productsCategoriesplaceHolders">
+          <i class="fas fa-tractor categoriesIcons"></i>
+          <p class="tituloCategoria">MÁQUINA</p>
+        </div>
+      </a>
+      <a href="produtos.html">
+        <div class="productsCategoriesplaceHolders">
+          <i class="fas fa-paw categoriesIcons"></i>
+          <p class="tituloCategoria">PETCARE</p>
+        </div>
+      </a>
+      <a href="produtos.html">
+        <div class="productsCategoriesplaceHolders">
+          <i class="fas fa-book categoriesIcons"></i>
+          <p class="tituloCategoria">SERVIÇOS</p>
+        </div>
+      </a>
+      <a href="produtos.html">
+        <div class="productsCategoriesplaceHolders">
+          <i class="fas fa-stethoscope categoriesIcons"></i>
+          <p class="tituloCategoria">VETERENÁRIA</p>
+        </div>
+      </a>      
+    </div>
   </div>
 </body>
 <footer class="footerBottom"> <!--Footer-->
