--- a/contatos.html
+++ b/contatos.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-pt">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="keywords" content="Cooperativa agricola do Cartaxo, Vinhas, Vinhos, adubos, agroquimicos, fitofarmacos, sementes, batatas, rações">
-    <meta name="description" content="LAVRICARTAXO Cooperativa agricola do Cartaxo, Vinhas, Vinhos, adubos, agroquimicos, fitofarmacos, sementes, batatas, rações">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/jpg" href="Images/icon.png" />
-    <link rel="stylesheet" href="CSS/style.css" type="text/css">
-    <link rel="stylesheet" href="fontawesome/css/all.css">
-    <link rel="stylesheet" href="fontawesome/css/all.min.css">
-
-    <!--Bootstrap está a entrar em confito com o style do resto da página-->
-    <link rel="stylesheet" href="Css/bootstrap.min.css"> 
-
-    <script src="JS/script.js"></script>
-    <title>Lavricartaxo</title>
+<head>
+  <meta charset="UTF-8">
+      <meta name="keywords" content="Cooperativa agricola do Cartaxo, Vinhas, Vinhos, adubos, agroquimicos, fitofarmacos, sementes, batatas, rações">
+      <meta name="description" content="LAVRICARTAXO Cooperativa agricola do Cartaxo, Vinhas, Vinhos, adubos, agroquimicos, fitofarmacos, sementes, batatas, rações">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="icon" type="image/jpg" href="Images/icon.png" />
+      <link rel="stylesheet" href="fontawesome/css/all.css">
+      <link rel="stylesheet" href="fontawesome/css/all.min.css">     
+      <link rel="stylesheet" href="CSS/style.css" type="text/css">
+      <script src="JS/script.js"></script>
+      <title>Lavricartaxo</title>
 </head>
+  
 <body onresize="resize()">
   <div class="header"> <!--Header-->
     <div class="top"> <!--Header Subsection Top-->
@@ -39,7 +36,7 @@
         </div>
       </div>          
     </div>    
-  </div>   
+  </div>
   <button class="topBtnPhone downBtn" id="sideBtnDown" onclick="sidebuttonD()"><i class="fas fa-caret-down"></i></button> <!--Sidebutton Phone Mode-->
   <button class="topBtnPhone upBtn" id="sideBtnUp" onclick="sidebuttonU()"><i class="fas fa-caret-up"></i></button> <!--Sidebutton Phone Mode-->
   <nav id="nav">
@@ -47,85 +44,14 @@
       <a href="index.html"><li class="menuText" id="op1">INICIO</li></a>
       <a href="quemsomos.html"><li class="menuText" id="op2">QUEM SOMOS</li></a>
       <a href="galeria.html"><li class="menuText" id="op3">GALERIA</li></a>
-      <a href="produtos.html"><li class="menuText" id="op4">PRODUTOS</li></a>
-      <a href="#"><li class="menuText" id="op5">CONTATOS</li></a>
+      <a href="#"><li class="menuText" id="op4">PRODUTOS</li></a>
+      <a href="contatos.html"><li class="menuText" id="op5">CONTATOS</li></a>
       <a href="marcas.html"><li class="menuText" id="op6">MARCAS</li></a>
       <a href="associados.html"><li class="menuText" id="op7">ASSOCIADOS</li></a>
     </ul>
   </nav>
-    <div class="main">
-      <div class="welcome">
-        <div class="info">
-          <div class="mapa">
-            <h1></br>Encontre-nos aqui</h1>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12373.9691393483!2d-8.791160000000001!3d39.163528!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb27463f5a3d96d77!2sLavricartaxo-Cooperativa%20Agro-Pecu%C3%A1ria%20do%20Cartaxo%20C.R.L.!5e0!3m2!1spt-PT!2spt!4v1616068831267!5m2!1spt-PT!2spt" width="600" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-          </div>
-        </div>
-      </div>
-      <!-- Contact Section -->
-      <section id="contact">
-        <div class="contact container">
-        </br><div><h1 class="section-title">Informações <span>de contacto</span></h1></div>
-          <div class="contact-items">
-            <div class="contact-item">
-              <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png"/></div>
-              <div class="contact-info">
-                <h2>Endereço</h2>
-                <p>Rua Batalhoz, n.81</p>
-                <p>2070-069 Cartaxo, Portugal</p>
-              </div>
-            </div>
-            <div class="contact-item">
-              <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png"/></div>
-              <div class="contact-info">
-                <h2>Email</h2>
-                <a href="geral@lavricartaxo.pt" class="contact-a">geral@lavricartaxo.pt</a>
-              </div>
-            </div>
-            <div class="contact-item">
-              <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/phone.png"/></div>
-              <div class="contact-info">
-                <h2>Telefone/Fax</h2>
-                <p>(+351) 243 700 240</p>
-                <p>(+351) 243 700 249</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- End Contact Section -->
-      <div class="col-sm-6">
-        <h1></br>Contacte-nos</br></br></h1>
-      </div>
-      <form>
-        <div class="form-group">
-          <label for="nome">Nome</label>
-          <input type="text" class="form-control" id="nome" required>
-        </div>
-        <div class="form-group">
-          <label for="local">Local</label>
-          <input type="text" class="form-control" id="local" required>
-        </div>
-        <div class="form-group">
-          <label for="email">Email</label>
-          <input type="email" class="form-control" id="email"required>
-        </div>
-        <div class="form-group">
-          <label for="telefone">Telefone</label>
-          <input type="tel" class="form-control" id="telefone" required>
-        </div>
-        <div class="form-group">
-          <label for="assunto">Assunto</label>
-          <input type="text" class="form-control" id="assunto" required>
-        </div>
-        <div class="form-group">
-          <label for="mensagem">Mensagem</label>
-          <textarea class="form-control" id="mensagem" rows="3" required></textarea>
-        </div>
-        <button type="submit" class="btn btn-primary" class="btn">Submeter</button>
-        <button type="reset" class="btn btn-danger" >Limpar</button>
-      </form>
-    </div>
+  <div class="main">
+  
   </div>
 </body>
 <footer class="footerBottom"> <!--Footer-->
