--- a/marcas.html
+++ b/marcas.html
@@ -50,88 +50,141 @@
     </ul>
   </nav>
   <div class="main">
+  </br>
+  </br>
+    <div class="tittleProductCategory">
+      <p>Adubos</p>
+    </div>
+      <br>
+      <div class="productsCategories">
+        <a href="">
+          <div class="marcasGallery">
+            <img src="Images/marcas/deiba.png" class="">
+          </div>
+        </a>
+        <a href="">
+          <div class="marcasGallery">
+            <img src="Images/marcas/cadubal.png" class="">
+          </div>
+        </a>
+        <a href="">
+          <div class="marcasGallery">
+            <img src="Images/marcas/nutrofertil.png" class="">
+          </div>
+        </a>
+      </div>
+      
     </br>
-    <h1 class="titleBrands"><b>As nossas marcas</b></h1>
     </br>
-    <div class="marcasGallery"><h2>Adubos</h2>
-      <a href="" >
-        <div>
-          <img src="Images/marcas/deiba.png" class="marcaGallery">
-        </div>
-      </a>
-      <a href="" >
-        <div >
-          <img src="Images/marcas/cadubal.png" class="marcaGallery">
-        </div>
-      </a>
-      <a href="">
-        <div >
-          <img src="Images/marcas/nutrofertil.png" class="marcaGallery">
-        </div>
-      </a>
+    <div class="tittleProductCategory">
+      <p>Agroquimicos</p>
     </div>
-    <div class="marcasGallery"><h2>Agroquimicos</h2>
-      <a href="">
-        <div>
-          <img src="Images/marcas/basf.png" class="marcaGallery">
-        </div>
-      </a>
-      <a href="">
-        <div>
-          <img src="Images/marcas/belchim.png" class="marcaGallery">
-        </div>
-      </a>
-      <a href="">
-        <div>
-          <img src="Images/marcas/epagro.png" class="marcaGallery">
-        </div>
-      </a>
-      <a href="">
-        <div>
-          <img src="Images/marcas/iqv.png" class="marcaGallery">
-        </div>
-      </a>
+      <br>
+      <div class="productsCategories">
+        <a href="">
+          <div class="marcasGallery">
+            <img src="Images/marcas/basf.png" class="">
+          </div>
+        </a>
+        <a href="">
+          <div class="marcasGallery">
+            <img src="Images/marcas/belchim.png" class="">
+          </div>
+        </a>
+        <a href="">
+          <div class="marcasGallery">
+            <img src="Images/marcas/epagro.png" class="">
+          </div>
+        </a>
+        <a href="">
+          <div class="marcasGallery">
+            <img src="Images/marcas/iqv.png" class="">
+          </div>
+        </a>
+      </div>
+
+    </br>
+    </br>
+    <div class="tittleProductCategory">
+      <p>Alimentação Animal</p>
     </div>
-    <div class="marcasGallery"><h2>Alimentação Animal</h2>
-      <a href="">
-        <div>
-          <img src="Images/marcas/biona.png" class="marcaGallery">
-        </div>
-      </a>
+      <br>
+      <div class="productsCategories">
+        <a href="">
+          <div class="marcasGallery">
+            <img src="Images/marcas/biona.png" class="">
+          </div>
+        </a>
+      </div>
+
+    </br>
+    </br>
+    <div class="tittleProductCategory">
+      <p>Petcare</p>
     </div>
-      <div class="marcasGallery"><h2>Petcare</h2>
-      <a href="">
-        <div>
-          <img src="Images/marcas/agrolex.png" class="marcaGallery">
-        </div>
-      </a>
+      <br>
+      <div class="productsCategories">
+        <a href="">
+          <div class="marcasGallery">
+            <img src="Images/marcas/agrolex.png" class="">
+          </div>
+        </a>
+      </div>
+
+    </br>
+    </br>
+    <div class="tittleProductCategory">
+      <p>Veterinária</p>
     </div>
-      <div class="marcasGallery"><h2>Veterinária</h2>
-      <a href="">
-        <div>
-          <img src="Images/marcas/fertiprado.png" class="marcaGallery">
-        </div>
-      </a>
-      <a href="">
-        <div>
-          <img src="Images/marcas/fito.png" class="marcaGallery">
-        </div>
-      </a>
+      <br>
+      <div class="productsCategories">
+        <a href="">
+          <div class="marcasGallery">
+            <img src="Images/marcas/fertiprado.png" class="">
+          </div>
+        </a>
+        <a href="">
+          <div class="marcasGallery">
+            <img src="Images/marcas/fito.png" class="">
+          </div>
+        </a>
+      </div>
+
+    </br>
+    </br>
+    <div class="tittleProductCategory">
+      <p>Bricolage</p>
     </div>
-      <div class="marcasGallery"><h2>Bricolage</h2>
-      <a href="">
-        <div>
-          <img src="Images/marcas/einhell.png" class="marcaGallery">
-        </div>
-      </a>
+      <br>
+      <div class="productsCategories">
+        <a href="">
+          <div class="marcasGallery">
+            <img src="Images/marcas/einhell.png" class="">
+          </div>
+        </a>
+      </div>
+
+    </br>
+    </br>
+    <div class="tittleProductCategory">
+      <p>Máquinas</p>
     </div>
+      <br>
+      <div class="productsCategories">
+        <a href="">
+          <div class="marcasGallery">
+            <img src="Images/marcas/lena.png" class="">
+          </div>
+        </a>
+      </div>
+    <!--
       <div class="marcasGallery"><h2>Máquinas</h2>
       <a href="">
         <div>
           <img src="Images/marcas/lena.png" class="marcaGallery">
         </div>
       </a>
-    </div>
+    </div> -->
   </div> 
 </body>
 <footer class="footerBottom"> <!--Footer-->
