--- a/galeria.html
+++ b/galeria.html
@@ -126,32 +126,30 @@
   </div>
 </body>
 <footer class="footerBottom"> <!--Footer-->
-  <div class="icondivFooter">
-    <img src="Images/icon.png" class="iconFooter">
-  </div>
   <div class="wheretofindusFooter">
-    <p>ONDE NOS ENCONTRAR<br><br>Rua Batalhoz Nr.81<br>2070-069 Cartaxo<br>Portugal</p>
+    <p><p class="tittleFooter">ONDE NOS ENCONTRAR</p><br>Rua Batalhoz Nr.81<br>2070-069 Cartaxo<br>Portugal</p>
   </div>
   <div class="contactusFooter">
-    <p>CONTATOS GERAIS<br><br>243 700 240<br>243 700 249</p>
+    <p><p class="tittleFooter">CONTATOS GERAIS</p><br>243 700 240<br>243 700 249</p>
   </div>
-  <div class="openFooter">
-    <p>ATENDIMENTO<br><br>Segunda a Sexta-feira<br>9H - 13H<br>14:30H - 18:30H</p>
-  </div>
-  <div class="openFooterI">
-    <p><br><br>Sábados<br>9H - 12:30H</p>
-  </div>
+  <div class="openFooterD">
+    <div class="openFooter">
+      <p><p class="tittleFooter">ATENDIMENTO</p><br>Segunda a Sexta-feira<br>9H - 13H<br>14:30H - 18:30H</p>
+    </div>
+    <div class="openFooterI">
+      <p><br><br>Sábados<br>9H - 12:30H</p>
+    </div>
+</div>
   <div class="suporteFooter">
-    <p>SUPORTE<br><br>Questões Frequentes<a href="contatos.html"><p>Contatos</p></a>
+    <p><p class="tittleFooter">SUPORTE</p><br>Questões Frequentes<br><a href="contatos.html">Contatos</a></p><a href="https://www.livroreclamacoes.pt/inicio"><img src="Images/rb.png" class="livrodereclamacoes"></a>
   </div>
-  <div  class="livrodereclamacoesFooter">
-    <a href="https://www.livroreclamacoes.pt"><img src="Images/rb.png" class="livrodereclamacoes"></a>
+  <div class="CDfooter">
+    <div class="copyright">
+      <p>Copyright &copy; 2021 Lavricartaxo-Cooperativa Agro-Pecuária do Cartaxo, C.R.L.</p>
+    </div>
+    <div class="desendesign">
+      <p>Desenvolvimento e Design:<a href="https://www.analogia.net/?opx=entrar">ANALOGIA.NET</a></p>
+    </div> 
   </div>
-  <div class="copyright">
-    <p>Copyright &copy; 2021 Lavricartaxo-Cooperativa Agro-Pecuária do Cartaxo, C.R.L.</p>
-  </div>
-  <div class="desendesign">
-    <p>Desenvolvimento e Design:<a href="https://www.analogia.net/?opx=entrar">ANALOGIA.NET</a></p>
-  </div> 
 </footer>
 </html>
