--- a/index.html
+++ b/index.html
@@ -294,10 +294,7 @@
     </div>
     <div class="openFooterD">
       <div class="openFooter">
-        <p><p class="tittleFooter">ATENDIMENTO</p><br>Segunda a Sexta-feira<br>9H - 13H<br>14:30H - 18:30H</p>
-      </div>
-      <div class="openFooterI">
-        <p><br><br>Sábados<br>9H - 12:30H</p>
+        <p><p class="tittleFooter">ATENDIMENTO</p><br>Segunda a Sexta-feira:<br>9h-13h / 14:30h-18:30h<br><br>Sábados:<br>9h-12:30H</p>
       </div>
   </div>
     <div class="suporteFooter">
